--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
         android:theme="@style/Theme.TwentyOneDays"
         tools:targetApi="31">
         <activity
+            android:name=".Drawer"
+            android:exported="false"
+            android:label="@string/title_activity_drawer"
+            android:theme="@style/Theme.TwentyOneDays.NoActionBar" />
+        <activity
             android:name=".HabitDisplay"
             android:exported="false" />
         <activity
